Table configuraciones {
    id int [pk, increment] //primary key
    nombre varchar
    descripcion varchar
    direccion varchar
    telefono varchar
    divisa varchar
    correo_electronico varchar
    web varchar
    logo varchar
}

Table gestiones {
    id int [pk, increment] //primary key
    nombre varchar
}
Table periodos {
    id int [pk, increment] //primary key
    nombre varchar
    gestion_id int [ref: > gestiones.id]
}
Table niveles {
    id int [pk, increment] //primary key
    nombre varchar
}
Table grados {
    id int [pk, increment] //primary key
    nombre varchar
    nivel_id int [ref: > niveles.id]
}
Table paralelos {
    id int [pk, increment] //primary key
    nombre varchar
    grado_id int [ref: > grados.id]
}
Table turnos {
    id int [pk, increment] //primary key
    nombre varchar
}
Table materias {
    id int [pk, increment] //primary key
    nombre varchar
}

Table users {
    id int [pk, increment] //primary key
    name varchar
    email varchar
    password varchar
}

Table personals {
    id int [pk, increment] //primary key
    usuario_id int [ref: > users.id]
    tipo varchar
    nombres varchar
    apellidos varchar
    ci varchar
    fecha_nacimiento date
    direccion varchar
    telefono varchar
    profesion varchar
    foto varchar
}
Table formaciones {
    id int [pk, increment] //primary key
    personal_id int [ref: > personals.id]
    titulo varchar
    institucion varchar
    nivel varchar
    fecha_graduacion date
    archivo varchar
}
Table ppffs {
    id int [pk, increment] //primary key
    nombre varchar
    apellidos varchar
    ci varchar
    fecha_nacimiento date
    telefono varchar
    parentesco varchar
    ocupacion varchar
    direccion varchar
}

Table estudiantes {
    id int [pk, increment] //primary key
    usuario_id int [ref: > users.id]
    ppffs_id int [ref: > ppffs.id]
    nombres varchar
    apellidos varchar
    ci varchar
    fecha_nacimiento date
    direccion varchar
    genero varchar
    telefono varchar
    foto varchar
    estado varchar
}
Table matriculaciones {
    id int [pk, increment] //primary key
    estudiante_id int [ref: > estudiantes.id]
    turno_id int [ref: > turnos.id]
    gestion_id int [ref: > gestiones.id]
    nivel_id int [ref: > niveles.id]
    grado_id int [ref: > grados.id]
    paralelo_id int [ref: > paralelos.id]
}
Table asignaciones {
    id int [pk, increment] //primary key
    personal_id int [ref: > personals.id]
    gestion_id int [ref: > gestiones.id]
    nivel_id int [ref: > niveles.id]
    grado_id int [ref: > grados.id]
    paralelo_id int [ref: > paralelos.id]
    materia_id int [ref: > materias.id]
    turno_id int [ref: > turnos.id]
    estado varchar
    fecha_asignacion date
}
Table pagos {
    id int [pk, increment] //primary key
    matriculacion_id int [ref: > matriculaciones.id]
    monto decimal(10,2)
    metodo_pago varchar
    descripcion varchar
    fecha_pago date
    estado varchar
}

Table asistencias {
    id int [pk, increment] //primary key
    asignacion_id int [ref: > asignaciones.id]
    fecha date
    observacion varchar
}

Table detalles_asistencias {
    id int [pk, increment] //primary key
    asistencia_id int [ref: > asistencias.id]
    estudiante_id int [ref: > estudiantes.id]
    estado_asistencia varchar
}

Table calificaciones {
    id int [pk, increment] //primary key
    asignacion_id int [ref: > asignaciones.id]
    periodo_id int [ref: > periodos.id]
    tipo varchar
    descripcion varchar
    fecha date
}

Table detalle_calificaciones {
    id int [pk, increment] //primary key
    calificacion_id int [ref: > calificaciones.id]
    estudiante_id int [ref: > estudiantes.id]
    tipo varchar
    nota decimal(5,2)
}
Table kardexs {
    id int [pk, increment] //primary key
    estudiante_id int [ref: > estudiantes.id]
    asignacion_id int [ref: > asignaciones.id]
    periodo_id int [ref: > periodos.id]
    observacion varchar
    nota varchar
    fecha date
}


